--- a/teste.html
+++ b/teste.html
@@ -6,6 +6,12 @@
   <title>Lista de Pets</title>
   <style>
     ul, li {list-style: none;}
+    /* Estilo adicional, opcional */
+    li {
+      border: 1px solid #ccc;
+      padding: 10px;
+      margin: 10px 0;
+    }
   </style>
 </head>
 <body>
@@ -16,17 +22,22 @@
     // Função para fazer a solicitação AJAX e exibir os animais
     async function carregarPets() {
       try {
-        const response = await fetch('https://salvapets.onrender.com/pets'); // Faz a solicitação para a rota /pets
+        const response = await fetch('http://localhost:8080/pets'); // Faz a solicitação para a rota /pets
+        if (!response.ok) {
+          throw new Error(`Erro na solicitação: ${response.status} - ${response.statusText}`);
+        }
         const data = await response.json(); // Converte a resposta em JSON
 
         const listaPets = document.getElementById('lista-pets');
+
+        // Limpa a lista de pets antes de adicionar novos
+        listaPets.innerHTML = '';
 
         // Itera sobre os dados e cria elementos HTML para exibir os pets
         data.forEach(pet => {
           const listItem = document.createElement('li');
           listItem.innerHTML = `
-            <br>
-            <img src="https://salvapets.onrender.com${pet.imagem}" alt="${pet.nome}" width="200"><br><br>
+            <img src="http://localhost:8080/${pet.imagem}" alt="${pet.nome}" width="200"><br><br>
             <strong>Tipo:</strong> ${pet.tipo}<br>
             <strong>Nome:</strong> ${pet.nome}<br>
             <strong>Idade:</strong> ${new Date(pet.idade).toLocaleDateString()}<br>
@@ -35,13 +46,14 @@
             <strong>Localização:</strong> ${pet.localizacao}<br>
             <strong>Descrição:</strong> ${pet.descricao}<br>
             <strong>Sobre:</strong> ${pet.sobre}<br>
-            <br>
             <hr>
           `;
           listaPets.appendChild(listItem);
         });
       } catch (error) {
         console.error(error);
+        const listaPets = document.getElementById('lista-pets');
+        listaPets.innerHTML = '<p>Ocorreu um erro ao carregar a lista de pets.</p>';
       }
     }
 
